Fixed minor spacing issues

--- a/app/styles/hover.scss
+++ b/app/styles/hover.scss
@@ -66,21 +66,16 @@
     }
     .grid figure .details .tracks>ol {
         overflow-y: scroll;
-        height: 225px;
+        height: 185px;
     }
-    /*.grid figure h5 {
-    word-spacing: -0.15em;
-    font-weight: 300;
-}
-.grid figure h5 span {
-    font-weight: 800;
-}*/
-    
+
     .grid figure h5, .grid figure p {
         margin: 0;
     }
     .grid figure h5 {
         font-size: 1em;
+        margin-right: 60px;
+        margin-top: -5px;
     }
     .grid figure p {
         letter-spacing: 1px;
